# qa-api-rs

./: .enc.env  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md
.github/: dependabot.yaml
.github/workflows/: build.yaml
hurl/: submit.hurl
scripts/: test.sh
src/: llm.rs  main.rs  routes.rs
