[package]
name = "qa-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
dotenv = "0.15.0"
listenfd = "1.0.1"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tower_governor = "0.4.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
