[package]
name = "qa-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
dotenv = "0.15.0"
envy = "0.4.2"
listenfd = "1.0.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.210"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
tower_governor = "0.4.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
